k8s/apps/observability/kube-prometheus-stack/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alertmanager
  namespace: observability
spec:
  hosts:
    - 'alertmanager.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 9093
            host: alertmanager-operated.observability.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: observability
spec:
  hosts:
    - 'prometheus.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: prometheus-prometheus.observability.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block
